--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     annotationProcessor('org.projectlombok:lombok')
     testAnnotationProcessor('org.projectlombok:lombok')
+    developmentOnly('org.springframework.boot:spring-boot-devtools')
 }
 
 test {
