로그출력하기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.
 #spring.devtools.restart.exclude=other/**
 # 자동재시작 사용여부
 spring.devtools.restart.enabled=true
+
+## Logging Setting
+logging.level.com.iksflow.study=trace
