테스트코드 클래스, 프로퍼티 로드방식 학습

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+## Custom Properties
+author.name = iksflow
+author.age = 20
+author.nation = KOREA
+
 ## Server Setting
 #server.port = 5000
 server.port = 0
@@ -25,4 +30,4 @@ spring.
 spring.devtools.restart.enabled=true
 
 ## Logging Setting
-logging.level.com.iksflow.study=trace
+logging.level.com.iksflow.study=warn
